hphp/test/quick/interface10.php.expectf
Test begin
HipHop Fatal error: Declaration of C::a() must be compatible with that of I::a() in %s on line 8
